--- a/Develop/index.html
+++ b/Develop/index.html
@@ -9,74 +9,107 @@
 
 <body> 
     <!-- navigation-->
-    <header class="header">
-        <h1>Hori<span class="seo">seo</span>n
+    <header>
+        <h1>
+            <a href="index.html">Hori<span class="seo">seo</span>n</a>
         </h1>
+            <!--Navigation-->
             <nav>
                 <!-- Unordered list element -->
                 <ul>
                     <!-- List item element-->
                     <li>
                         <!-- Anchor element -->
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                        <a href="#search-engine-optimization">Search Engine Optimization</a>
                     </li>
                     <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
+                        <a href="#online-reputation-management">Online Reputation Management</a>
                     </li>
                     <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
+                        <a href="#social-media-marketing">Social Media Marketing</a>
                     </li>
                 </ul>
             </nav>
     </header>
 
+    <!--hero/jumbotron-->
     <div class="hero"></div>
-      <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-            </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
-            <h2>Online Reputation Management</h2>
-            <p>
-                The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-            </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
-            <h2>Social Media Marketing</h2>
-            <p>
-                Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-            </p>
-        </div>
-        </div>
-        <div class="benefits">
-        <div class="benefit-lead">
+
+    <div class="content">
+
+
+        <!--first section-->
+        <article class="services">
+
+            <div id="search-engine-optimization" class="search-engine-optimization">
+                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="colorfull sketch of engine optimization" />
+                <h2>Search Engine Optimization</h2>
+                <p>
+                    The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or
+                    sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the
+                    right customers for your business.
+                </p>
+            </div>
+        </article>
+
+        <!--second section problem child-->
+        <aritcle class="services">
+
+            <div id="online-reputation-management" class="online-reputation-management">
+                <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="laptop oppened to graph or reputation going up" />
+                <h2>Online Reputation Management</h2>
+                <p>
+                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet
+                    connection to say whatever they want about your business. Online Reputation Management gives you the control
+                    over what potential customers see when they search for your business.
+                </p>
+            </div>
+        </aritcle>
+
+        <!--third section-->
+        <article class="services">
+            <div id="social-media-marketing" class="social-media-marketing">
+                <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="table with hand around working together"/>
+                <h2>Social Media Marketing</h2>
+                <p>
+                    Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine
+                    which platforms are suited to your brand, using analytics to find the right markets and increase your lead
+                    generation.
+                </p>
+            </div>
+        </article>
+        
+    </div>
+    <!--benefits right hand side of page section-->
+    <div class="benefits">
+
+        <div>
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="gear funneling down to money sign" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+
+        <div>
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="shape of man with head of lightbulb lighting up" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+
+        <div>
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="gears and money signs together"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
+
     </div>
+    
+    <!--Ending part of page footer-->
     <div class="footer">
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
