--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./Develop/assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
-    <div class="header">
+    <main class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <div>
             <ul>
@@ -23,20 +23,21 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </main>
+
     <div class="hero"></div>
-    <div class="content">
-        <div class="search-engine-optimization">
-            <img src="./Develop/assets/images/search-engine-optimization.jpg" class="float-left" />
-            <h2>Search Engine Optimization</h2>
-            <p>
-                The dominance of mobile internet use means that users are searching for the right business as they
-                travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
-                your visibility and find the right customers for your business.
-            </p>
+        <div class="content">
+            <div class="search-engine-optimization">
+                <img src="./Develop/assets/images/search-engine-optimization.jpg" class="float-left" alt="seo in a notepad drwn to convey the services" />
+                <h2>Search Engine Optimization</h2>
+                <p>
+                    The dominance of mobile internet use means that users are searching for the right business as they
+                    travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase
+                    your visibility and find the right customers for your business.
+                </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./Develop/assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./Develop/assets/images/online-reputation-management.jpg" class="float-right" alt="laptop open to reputation graph inclining"/>
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -45,7 +46,7 @@
             </p>
         </div>
         <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./Develop/assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./Develop/assets/images/social-media-marketing.jpg" class="float-left" alt="colorful media icons around the table" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
