--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section class="benefits">
         <article>
             <h3>Lead Generation</h3>
-            <img src="./Develop/assets/images/lead-generation.png"></img>
+            <img src="./Develop/assets/images/lead-generation.png" alt="gears funneling to money"></img>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -72,7 +72,7 @@
 
         <article>
             <h3>Brand Awareness</h3>
-            <img src="./Develop/assets/images/brand-awareness.png"></img>
+            <img src="./Develop/assets/images/brand-awareness.png" alt="Person with light up head"></img>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
@@ -81,7 +81,7 @@
 
         <article>
             <h3>Cost Management</h3>
-            <img src="./Develop/assets/images/cost-management.png"></img>
+            <img src="./Develop/assets/images/cost-management.png" alt="money sign and gears"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
