--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <section class="content">
 
-        <article id="search-engine-optimization" class="search-engine-optimization">
+        <article id="search-engine-optimization" class="services">
             <img src="./Develop/assets/images/search-engine-optimization.jpg" class="float-left" alt="seo in a notepad drwn to convey the services" />
             <h2>Search Engine Optimization</h2>
             <p>
@@ -39,7 +39,7 @@
             </p>
         </article>
 
-        <article id="online-reputation-management" class="online-reputation-management">
+        <article id="online-reputation-management" class="services">
             <img src="./Develop/assets/images/online-reputation-management.jpg" class="float-right" alt="laptop open to reputation graph inclining"/>
             <h2>Online Reputation Management</h2>
             <p>
@@ -49,7 +49,7 @@
             </p>
         </article>
 
-        <article id="social-media-marketing" class="social-media-marketing">
+        <article id="social-media-marketing" class="services">
             <img src="./Develop/assets/images/social-media-marketing.jpg" class="float-left" alt="colorful media icons around the table" />
             <h2>Social Media Marketing</h2>
             <p>
